# rocketcsv

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE-COMMERCIAL  NOTICE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_full.py  bench_read.py  bench_write.py
python/rocketcsv/: __init__.py  _fallback.py
scripts/: fetch_corpus.sh  generate_synthetic.py
src/: lib.rs
tests/: conftest.py  corpus_runner.py  test_csv_compat.py  test_dictreader.py  test_dictwriter.py  test_fast_reader.py  test_reader.py  test_writer.py
