[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rocketcsv"
version = "0.1.0a1"
description = "Rust-backed drop-in replacement for Python's csv module"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[tool.maturin]
python-source = "python"
module-name = "rocketcsv._rocketcsv"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
